Removed Contact Form
Removed PHP contact form; customized header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,12 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
+                        <h3>Get In Touch</h3>
                         <p>
                             {% for adress in site.address %}
                                 {{ adress.line }} <br>
 		                    {% endfor %}
+							<a href="mailto:david@rappaport.me" style="color: white">david@rappaport.me</a> 
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
@@ -23,7 +24,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Credits</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <p>This site is generated using <a href="https://github.com/jeromelachaud/freelancer-theme">Freelancer</a> for <a href="http://jekyllrb.com/">Jekyll</a> and hosted by <a href="http://github.com">GitHub</a>.</p>
                     </div>
                 </div>
             </div>
