--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I'm currently a student at the <a href="http://www.colorado.edu/" style="color:#B7C6D9">University of Colorado</a>. I love doing cool side-projects in my spare time, some of which I've written about above. Sometimes <a href="http://blogs.microsoft.com/firehose/2014/08/08/stratospheric-microsoft-interns-to-launch-balloon-to-edge-of-space-saturday-and-want-you-to-participate/" style="color:#B7C6D9">other people</a> write about them, too!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>I also enjoy <a href="http://www.usfirst.org/roboticsprograms/frc" style="color:#B7C6D9">teaching high school students about robots.</a> Feel free to shoot me an <a href="mailto:david@rappaport.me" style="color:#B7C6D9">email</a> if you'd like to get in touch, or check out my LinkedIn and GitHub profiles below.</p>
                 </div>
             </div>
         </div>
