Jan 2016 content updates

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm currently a student at the <a href="http://www.colorado.edu/" style="color:#B7C6D9">University of Colorado</a>. I love doing cool side-projects in my spare time, some of which I've written about above. Sometimes <a href="http://blogs.microsoft.com/firehose/2014/08/08/stratospheric-microsoft-interns-to-launch-balloon-to-edge-of-space-saturday-and-want-you-to-participate/" style="color:#B7C6D9">other people</a> write about them, too!</p>
+                    <p>I'm currently a senior at the <a href="http://www.colorado.edu/" style="color:#B7C6D9">University of Colorado</a>, and I'll be joining the <a href="https://www.microsoft.com/appliedsciences/" style="color:#B7C6D9">Applied Sciences Group</a> at Microsoft later on this year. I love working on cool side projects, some of which I've written about above. You can also check out my full <a href="http://portfolio.rappaport.me" style="color:#B7C6D9">portfolio</a>.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I also enjoy <a href="http://www.usfirst.org/roboticsprograms/frc" style="color:#B7C6D9">teaching high school students about robots.</a> Feel free to shoot me an <a href="mailto:david@rappaport.me" style="color:#B7C6D9">email</a> if you'd like to get in touch, or check out my LinkedIn and GitHub profiles below.</p>
+                    <p>In my spare time, I enjoy <a href="http://www.usfirst.org/roboticsprograms/frc" style="color:#B7C6D9">teaching high school students about robots.</a> Feel free to shoot me an <a href="mailto:david@rappaport.me" style="color:#B7C6D9">email</a> if you'd like to get in touch, or check out my LinkedIn and GitHub profiles below.</p>
                 </div>
             </div>
         </div>
