--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Credits</h3>
-                        <p>This site is generated using <a href="https://github.com/jeromelachaud/freelancer-theme">Freelancer</a> for <a href="http://jekyllrb.com/">Jekyll</a> and hosted by <a href="http://github.com">GitHub</a>.</p>
+                        <p>This site is generated using <a href="https://github.com/jeromelachaud/freelancer-theme" style="color:#53739D">Freelancer</a> for <a href="http://jekyllrb.com/" style="color:#53739D">Jekyll</a> and hosted by <a href="http://github.com" style="color:#53739D">GitHub</a>.</p>
                     </div>
                 </div>
             </div>
