--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
+	{% comment %}
     {% include highlights_grid.html %}
+	{% endcomment %}
     {% include about.html %}
     {% include footer.html %}
     {% include modals.html %}
