--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
                     <div class="footer-col col-md-4">
                         <h3>Get In Touch</h3>
                         <p>
-                            {% for adress in site.address %}
-                                {{ adress.line }} <br>
+                            {% for address in site.address %}
+                                {{ address.line }} <br>
 		                    {% endfor %}
 							<a href="mailto:david@rappaport.me" style="color: white">david@rappaport.me</a> 
                         </p>
@@ -24,7 +24,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Credits</h3>
-                        <p>This site is generated using <a href="https://github.com/jeromelachaud/freelancer-theme" style="color:#53739D">Freelancer</a> for <a href="http://jekyllrb.com/" style="color:#53739D">Jekyll</a> and hosted by <a href="http://github.com" style="color:#53739D">GitHub</a>.</p>
+                        <p>This site is generated using <a href="https://github.com/jeromelachaud/freelancer-theme" style="color:#6992C7">Freelancer</a> for <a href="http://jekyllrb.com/" style="color:#6992C7">Jekyll</a> and hosted by <a href="http://github.com" style="color:#6992C7">GitHub</a>.</p>
                     </div>
                 </div>
             </div>
