--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#highlights">highlights</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +37,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills"><div>Studying Electrical & Computer Engineering @ CU Boulder.</div>Making cool things with wires.</span>
+                        <span class="skills"><div>Multidisciplinarian making cool things with wires & words.</div>Hardware incubation @ Microsoft + UX/HCI @ UW.</span>
                     </div>
                 </div>
             </div>
@@ -51,4 +48,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-`
