--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,16 +3,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h2>About Me</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm currently a senior at the <a href="http://www.colorado.edu/" style="color:#B7C6D9">University of Colorado</a>, and I'll be joining the <a href="https://www.microsoft.com/appliedsciences/" style="color:#B7C6D9">Applied Sciences Group</a> at Microsoft later on this year. I love working on cool side projects, some of which I've written about above. You can also check out my full <a href="http://portfolio.rappaport.me" style="color:#B7C6D9">portfolio</a>.</p>
+                    <p>I'm currently building cutting-edge hardware products with Microsoft's <a href="https://www.microsoft.com/appliedsciences/" style="color:#6992C7">Applied Sciences</a> incubation group. I studied <a href="https://www.colorado.edu/ecee/" style="color:#6992C7">electrical engineering</a> at the University of Colorado, and am now working on my master's in <a href="https://www.hcde.washington.edu/about" style="color:#6992C7">human-centered design & engineering</a> at the University of Washington.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>In my spare time, I enjoy <a href="http://www.usfirst.org/roboticsprograms/frc" style="color:#B7C6D9">teaching high school students about robots.</a> Feel free to shoot me an <a href="mailto:david@rappaport.me" style="color:#B7C6D9">email</a> if you'd like to get in touch, or check out my LinkedIn and GitHub profiles below.</p>
+                    <p>In my spare time, you'll find me working on various side projects, snapping photos, hiking, teaching high school students about robotics, doing things with turntables, and exploring other countries. Check out the links below for more about what I do, or feel free to <a href="mailto:david@rappaport.me" style="color:#6992C7">get in touch</a>!</p>
                 </div>
             </div>
         </div>
