Update default.html to include Clicky tracking script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,6 +95,9 @@
 	<!-- Custom scripts -->
 	<script src="/assets/js/custom.js"></script>
 	<script src="/assets/js/custom-shuffle-init.js"></script>
+	<!-- Tracking scripts -->
+	<script async data-id="101426079" src="//static.getclicky.com/js"></script>
+
 
 </body>
 </html>
